Don't initialize event when calling create() with no argument

"BeforeUnloadEvent", "CloseEvent" and "PopStateEvent" initialized
too early when created with document.createEvent, cause they have
default "type" attribute unexpectedly.

Tests were changed accordingly

BUG=684851

Review-Url: https://codereview.chromium.org/2677793003
Cr-Commit-Position: refs/heads/master@{#448515}

Former-commit-id: 39d843f8a5df7d463c3a14b4fe493e19db91c87e